Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113272

Theme light properties are not passed through to gradient materials

    XMLWordPrintable

Details

    • 0477e3165 (dev), 9ef74204d (6.6), 48414c26d (6.6), c97c8bf8f (dev), ba8ada9fb (dev), 76eb4b4b3 (6.6)

    Description

      Range and object gradient materials have their own implementations for light calculations, so the light property changes (at least not all of them) done based on theme do not have an effect.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tokorpip Tomi Korpipää
              tokorpip Tomi Korpipää
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes