Patch through lightStrength to surface shader

Replace the hardcoded spcularity value with one from
the theme's lightStrength

Task-number: QTBUG-113272
Change-Id: I7a132290a0692cf7e6af11066735869baea2a020
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
(cherry picked from commit ba8ada9fb97b70387c920f948598ae9619dc2e9a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>