src/graphs/qml/qquickgraphssurface_p.h
@@ -71,6 +71,7 @@ protected:
     void updateSliceGraph() override;
     bool handleMousePressedEvent(QMouseEvent *event) override;
     void updateSingleHighlightColor() override;
+    void updateLightStrength() override;
     void handleThemeTypeChange() override;
     bool handleTouchEvent(QTouchEvent *event) override;
     bool doPicking(const QPointF &position) override;
